--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 token.key=${TOKEN_KEY}
+
+springdoc.swagger-ui.csrf.enabled=true
